tests/build/cases/property/incorrect_attr_args.stderr
error: unexpected token
 --> cases/property/incorrect_attr_args.rs:3:19
  |
3 | #[property(CONTEXT, unknown = true)]
  |                   ^

error: property input can only have `impl OneTrait` or `StateVar` types
 --> cases/property/incorrect_attr_args.rs:4:43
  |
4 | fn unknown_arg(child: impl UiNode, input: bool) -> impl UiNode {
  |                                           ^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> cases/property/incorrect_attr_args.rs:6:2
  |
6 | }
  |  ^ consider adding a `main` function to `$DIR/cases/property/incorrect_attr_args.rs`
